--- a/_griddle.scss
+++ b/_griddle.scss
@@ -22,6 +22,7 @@
 
 $grid-direction: left !default; // switch to 'right' for rtl
 $grid-gutter: 20px !default; // can be px, em, or %
+$grid-font-family: sans-serif !default;
 
 
 /* Grid core
@@ -33,12 +34,8 @@ $grid-gutter: 20px !default; // can be px, em, or %
  *
  * 1. Adjustment for child element margins.
  * 2. Ensure consistent default alignment/
- * 3. Remove inter-unit whitespace that appears between `inline-block` child
- *    elements. Work for all non-monospace font-families.  If you're using a
- *    monospace base font, you will need to set the `grid` font-family to
- *   `sans-serif` and then redeclare the monospace font on the `grid__cell`
- *    objects.
- * 4. Protect against WebKit bug with optimizelegibility.
+ * 3. Remove inter-cell whitespace that appears between `inline-block` child
+ *    elements.
  */
 
 .grid {
@@ -46,17 +43,8 @@ $grid-gutter: 20px !default; // can be px, em, or %
     padding: 0;
     margin: 0 -0.5 * $grid-gutter; /* 1 */
     text-align: $grid-direction; /* 2 */
-    letter-spacing: -0.31em; /* 3 */
-    text-rendering: optimizespeed; /* 4 */
-}
-
-/**
- * Opera hack
- */
-
-.opera:-o-prefocus,
-.grid {
-    word-spacing: -0.43em; /* 3 */
+    font-family: monospace; /* 3 */
+    word-spacing: -1ch; /* 3 */
 }
 
 /**
@@ -90,9 +78,8 @@ $grid-gutter: 20px !default; // can be px, em, or %
     padding: 0 0.5 * $grid-gutter; /* 2 */
     vertical-align: top; /* 3 */
     text-align: $grid-direction; /* 4 */
-    letter-spacing: normal; /* 5 */
+    font-family: $grid-font-family; /* 5 */
     word-spacing: normal; /* 5 */
-    text-rendering: auto; /* 5 */
 }
 
 /* Grid modifiers
